# blamegraph

./: Cargo.toml
scripts/: update_uplot
src/: authors.rs  data.rs  gather.rs  graph.rs  main.rs  progress.rs  years.rs
src/data/: authors.rs  blame.rs  blametree.rs  commit.rs
src/gather/: git.rs
src/graph/: common.rs  graph.rs  series.rs
static/: graph_template.html
