[package]
name = "blamegraph"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = [
    "derive",
    "deprecated",
    "unstable-v5",
] }
# Contains https://github.com/console-rs/indicatif/pull/648
indicatif = { git = "https://github.com/console-rs/indicatif.git", rev = "529531726fca07e0a624462838104388e89d029d" }
jiff = { version = "0.1.1", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tempfile = "3.10.1"
toml = "0.8.16"
unicode-width = "0.1.13"
